@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2007-2009, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2007-2013, Image Engine Design Inc. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -45,9 +45,9 @@ Writer::WriterDescription<T>::WriterDescription( const std::string &extensions )
 }
 
 template<class T>
-WriterPtr Writer::WriterDescription<T>::creator( ObjectPtr object, const std::string &fileName )
+WriterPtr Writer::WriterDescription<T>::creator()
 {
-	return new T( object, fileName );
+	return new T();
 }
 
 } // namespace IECore
